@@ -63,6 +63,18 @@ ssl_check_version(void)
 
 	INIT_SSL();
 }
+
+# if OPENSSL_VERSION_NUMBER < 0x10002000L
+# include <openssl/objects.h>
+# include <openssl/x509.h>
+
+int X509_get_signature_nid(const X509 *x);
+
+int X509_get_signature_nid(const X509 *x)
+{
+    return OBJ_obj2nid(x->sig_alg->algorithm);
+}
+# endif
 #endif	/* OPENSSL */
 
 
