@@ -30,6 +30,7 @@
              even if it is very old <perlinger@ntp.org>
   - make sure PPS source is alive before processing samples
   - improve stability close to the 500ms phase jump (phase gate)
+* Shim X509_get_signature_nid() if needed.
 * git author attribution cleanup
 * bk ignore file cleanup
 
